--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: rust
 rust:
-- 1.0.0
-- 1.2.0
-- 1.10.0
+- 1.12.0 # oldest supported
+- 1.14.0 # fist version with support of macro within macro  (for the tests)
+- 1.16.0
+- 1.24.0
 - 1.28.0
 - 1.29.2
-- 1.36.0
-- 1.37.0
+- 1.30.0 # first with path to invoke macros
+- 1.31.0 # first version with const_fn
+- 1.36.0 # first version with MaybeUninit
+- 1.37.0 # most tested version
 - stable
 - beta
 - nightly
