--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "if_rust_version"
 build = "build.rs"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["Olivier Goffart <ogoffart@woboq.com>"]
 description = "Macro to enable or disable code depending on the rust version"
 readme = "README.md"
 license = "MIT/Apache-2.0"
-keywords = ["version", "check"]
+keywords = ["version", "check", "rustc"]
 repository = "https://github.com/ogoffart/if_rust_version"
 documentation = "https://docs.rs/if_rust_version"
+categories = ["development-tools", "no-std"]
+
 
